fixed the spacing and a little bit for aleph-bet

--- a/TCheat/src/app/app.component.css
+++ b/TCheat/src/app/app.component.css
@@ -1,5 +1,5 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
 
 .example-card {
-    max-width: 200px;
+    max-width: 800px;
   }
